my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/WTTYPEC/WTTYPEC.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WTTYPEC.dml:13:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WTTYPEC.dml:22:5: warning WTTYPEC: the time value of type 'double' is implicitly converted to the type 'int64' expected by the specified time unit 'cycles'.
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_WTTYPEC.dml:27:5: warning WTTYPEC: the time value of type 'double' is implicitly converted to the type 'int64' expected by the specified time unit 'ps'.
